Added server conf and update and list enpoints for food

--- a/internal/mailer/templates/token_password_reset.html
+++ b/internal/mailer/templates/token_password_reset.html
@@ -1,4 +1,4 @@
-{{define "subject"}}Reset your Greenlight password{{end}}
+{{define "subject"}}Reset your Gym password{{end}}
 
 {{define "plainBody"}}
 Hi,
@@ -12,7 +12,7 @@ another token please make a `POST /v1/tokens/password-reset` request.
 
 Thanks,
 
-The Greenlight Team
+The Gym Team
 {{end}}
 
 {{define "htmlBody"}}
