--- a/internal/mailer/templates/token_activation.html
+++ b/internal/mailer/templates/token_activation.html
@@ -1,4 +1,4 @@
-{{define "subject"}}Activate your Greenlight account{{end}}
+{{define "subject"}}Activate your Gym account{{end}}
 
 {{define "plainBody"}}
 Hi,
@@ -11,7 +11,7 @@ Please note that this is a one-time use token and it will expire in 3 days.
 
 Thanks,
 
-The Greenlight Team
+The Gym Team
 {{end}}
 
 {{define "htmlBody"}}
@@ -29,7 +29,7 @@ The Greenlight Team
     </code></pre> 
     <p>Please note that this is a one-time use token and it will expire in 3 days.</p>
     <p>Thanks,</p>
-    <p>The Greenlight Team</p>
+    <p>The Gym Team</p>
   </body>
 </html>
 {{end}}
