--- a/internal/mailer/templates/user_welcome.html
+++ b/internal/mailer/templates/user_welcome.html
@@ -1,4 +1,4 @@
-{{define "subject"}}Welcome to Greenlight!{{end}}
+{{define "subject"}}Welcome to The Gym!{{end}}
 
 {{define "plainBody"}}
 Hi,
@@ -16,7 +16,7 @@ Please note that this is a one-time use token and it will expire in 3 days.
 
 Thanks,
 
-The Greenlight Team
+The The Gym Team
 {{end}}
 
 {{define "htmlBody"}}
