Added breakfast insert

--- a/internal/mailer/templates/user_welcome.html
+++ b/internal/mailer/templates/user_welcome.html
@@ -3,7 +3,7 @@
 {{define "plainBody"}}
 Hi,
 
-Thanks for signing up for a Greenlight account. We're excited to have you on board!
+Thanks for signing up for a Gym account. We're excited to have you on board!
 
 For future reference, your user ID number is {{.userID}}.
 
@@ -30,7 +30,7 @@ The The Gym Team
 
 <body>
     <p>Hi,</p>
-    <p>Thanks for signing up for a Greenlight account. We're excited to have you on board!</p>
+    <p>Thanks for signing up for a Gym account. We're excited to have you on board!</p>
     <p>For future reference, your user ID number is {{.userID}}.</p>
      <p>Please send a request to the <code>PUT /v1/users/activated</code> endpoint with the 
     following JSON body to activate your account:</p>
@@ -39,7 +39,7 @@ The The Gym Team
     </code></pre>
     <p>Please note that this is a one-time use token and it will expire in 3 days.</p>
     <p>Thanks,</p>
-    <p>The Greenlight Team</p>
+    <p>The Gym Team</p>
 </body>
 
 </html>
